--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack serve --open --mode development"
+    "start": "webpack serve --mode=development"
   },
   "keywords": [],
   "author": "Brayan Ñauñay <alexanderbrayan2001_@outlook.com>",
